fixed header spacing

--- a/source/styles/navigation.scss
+++ b/source/styles/navigation.scss
@@ -12,7 +12,7 @@ input#nav-toggle:checked ~ #nav-menu {
 }
 
 .header {
-  @apply bg-body py-4 lg:py-14  px-4;
+  @apply bg-body py-4 lg:py-10  px-4;
 }
 
 // navbar items
